--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,124 +1,133 @@
-@import 'noDefaultStyle.scss';
-@import 'varsMixExten.scss';
-@font-face {
-	font-family: 'Raleway-Light';
-	src: url(../Resources/Raleway-Light.ttf);
-}
-body{
+// base.scss
+@import 'noDefaultStyle';
+@import 'varsMixinExtends';
+$menuHeight:50px;
+body {
+	background: $primary-color;
 	display: block;
-	background-color: $primary-color;
-	/*background-image: url(../Resources/BckGrnd.svg);*/
-	#menu{
-		width: 100%;
+	font-family: "Raleway-Light";
+	.fixed-top{
+		@include flex(row, space-between, center);
+		@include widthHeightsize($width-12, $menuHeight);
 		background-color: $primary-color;
-		height: $menuHeight;
-		position: fixed;
 		top: 0;
-		font-family: "Raleway-Light";
-		@extend %FB-row-spcB-cen;
-		color: $third-color100;
-		#logo{
-			@include widthHeightsize(30%, 80%);
-			margin-left: 10px;
+		position: fixed;
+		.logo{
+			@extend %FB-row-cen-cen;
 			font-size: 20px;
-			@extend %FB-col-cen-cen;
-			flex-wrap: wrap
+			letter-spacing: 0.9em;
+			color: $third-color100;
+			text-align: center;
+			@media (min-width: 160px) and (max-width: $smallWidth){
+				@include widthHeightsize($width-10, 80%);
+				margin-top: 5px;
+			}
+			@media (min-width: $smallWidth+1) and (max-width: $mediumWidth){
+				@include widthHeightsize($width-4, 80%);
+				margin-left: 10px;
+			}
+			@media (min-width: $mediumWidth+1){
+				@include widthHeightsize($width-4, 80%);
+				margin-left: 10px;
+			}
 		}
-		ul{
-			margin-right: 10px;
-			@include widthHeightsize(50%, 80%);
-			@extend %FB-row-spcA-cen;
-			li{
-				@include widthHeightsize(25%, 100%);
-				
-				/*a{
-					@include widthHeightsize(100%, 100%);
-					color: $third-color100;
-					text-transform: uppercase;
-					font-size: 12px;
-					border-top: 1px solid $third-color50;
-					border-bottom: 1px solid $third-color50;
-					border-right: 1px solid $third-color50;
-					border-left: none;
+		div{
+			@include flex(column, center, center);
+			@media (min-width: 160px) and (max-width: $smallWidth){
+				&::before{
+					content: "";
+					background-image: url(../Resources/menu.svg);
+					@include widthHeightsize(40px, 40px);
+					background-position: 0px;
+					background-size: cover;
+					cursor: pointer;
+					margin:  0px 10px 0px 0px;
 				}
-				&:first-child a{
-					border-top: 1px solid $third-color50;
-					border-bottom: 1px solid $third-color50;
-					border-left: 1px solid $third-color50;
-				}*/
-				.Dluxe{
-					background: transparent;
-					background: linear-gradient(0deg, rgba(243, 200, 96, 1), rgba(126, 104, 50, 0.8), rgba(126, 116, 93, 0), rgba(71, 65, 52, 0));
-					background-position: 0% 0%;
-					background-size: 300% 300%;
+				@include widthHeightsize($width-1, 80%);
+			}
+			@media (min-width: $smallWidth+1) and (max-width: $mediumWidth){
+				@include widthHeightsize($width-6, 80%);
+			}
+			@media (min-width: $mediumWidth+1){
+				@include widthHeightsize($width-6, 80%);
+			}
+			&:hover ul{
+				@media (min-width: 160px) and (max-width: $smallWidth){
+					@include widthHeightsize($width-6, 100%);
+					opacity: 1;
 				}
-
-				.Dluxe:hover {
-					background-position: 0% 90%;
+			}
+			ul{
+				@include widthHeightsize($width-12, 80%);
+				@media (min-width: 160px) and (max-width: $smallWidth){
+					transition: 0.6s ease;
+					opacity: 0;
+					@include flex(column, space-around, center);
+					position: fixed;
+					top: 0;
+					right: 0;
+					background-color: $secondary-color;
+					@include widthHeightsize($width-0, 100%);
 				}
-				a:hover{
-					letter-spacing: 6px;
-					color: $fourth-color;
+				@media (min-width: $smallWidth+1) and (max-width: $mediumWidth){
+					@include flex(row, space-around, center);
 				}
-				a:active{
-					transform: translateY(2px);
-					transition: 0.02s;
+				@media (min-width: $mediumWidth+1){
+					@include flex(row, space-around, center);
 				}
-				a{
-					@include widthHeightsize(90%, 100%);
-					color: $third-color100;
-					text-transform: uppercase;
-					font-size: 13px;
-					border-bottom: 1px solid $third-color50;
-					transition: 0.7s ease-out;
-					letter-spacing: 2px;
-					border-radius: 20px 20px 0px 0px;
-				}
-				&, & a{
+				li{
+					@media (min-width: 160px) and (max-width: $smallWidth){
+						@include widthHeightsize(90%, 40px);
+					}
 					@extend %FB-col-cen-cen;
+					@include widthHeightsize(auto, 100%);
+					flex-grow: 1;
+					.luxFX{
+						@extend %FB-col-cen-cen;
+						letter-spacing: 0.7em;
+						font-size: 10px;
+						border-bottom: 1px solid $third-color50;
+						transition: 0.6s ease;
+						text-transform: uppercase;
+						color: $third-color100;
+						background: linear-gradient(0deg, $third-color100, rgba(146,111,52,0.8), rgba(34,34,34,0), rgba(34,34,34,0));
+						background-position: 50% 15%;
+						background-size: 300% 300%;
+						border-radius: 20px 20px 0px 0px;
+						opacity: 0.8;
+						@media (min-width: 160px) and (max-width: $smallWidth){
+							background-position: 50% 1%;
+							border: 1px solid $third-color50;
+							@include widthHeightsize(90%, 50px);
+							border-radius: 0px 0px 0px 0px;
+						}
+						@media (min-width: $smallWidth+1) and (max-width: $mediumWidth){
+							@include widthHeightsize(100%, 100%);
+						}
+						@media (min-width: $mediumWidth+1){
+							@include widthHeightsize(80%, 100%);
+						}
+						&:active{
+							opacity: 1;
+							transition: 0.05s ease;
+						}
+					}
+					&:hover .luxFX{
+						background-position: 50% 99%;
+						color: #fff;
+						letter-spacing: 0.9em;
+					}		
 				}
 			}
-		}
-	}
-	header{
-		@extend %FB-row-spcA-cen;
-		margin-top: $menuHeight;
-		@include widthHeightsize(100%, auto);
-		section{
-			@include widthHeightsize(50%, 100%);			
-		}
-		#imgSect{
-			@extend %FB-col-cen-cen;
-			#img{
-				@extend %FB-col-cen-cen;
-				@include widthHeightsize(300px, 300px);
-				background-image: url(../Resources/manImg.jpg);
-				background-size: cover;
-				background-position: 0px 0px;
-				border-radius: 100%;
-				border: 4px solid $third-color100;
-			}
-		}
-		#descSect{
-			@extend %FB-col-spcA-cen;
-			h1{
-				padding-top: 50px;
-				padding-bottom: 50px;
-			}
-			p{
-				padding-top: 50px;
-				padding-bottom: 50px;				
-			}		
 		}
 	}
 	main{
-		@include widthHeightsize(100%, 1200px);
-		background-color: rgba(250, 0, 250, 0.7);
-		#service{			
-			background-image: url(../Resources/bgImg.jpg);
-			background-size: cover;
-			background-attachment: fixed;
-		}
+		margin-top: $menuHeight;
+		@extend %FB-col-cen-cen;
+	}
+	header{
+		@include widthHeightsize($width-12, 620px);
+	//	background-color: green;
 	}
 	footer{
 		@include widthHeightsize(100%, 300px);
