--- a/SCSS/_varsMixinExtends.scss
+++ b/SCSS/_varsMixinExtends.scss
@@ -4,6 +4,8 @@ $primary-color: rgba(30, 54, 65, 1);
 $secondary-color: rgba(35, 35, 45, 1);
 $secondary-color-dk: rgba(25, 25, 30, 1);
 $third-color100: rgba(243, 200, 96, 1);
+$third-color80: rgba(243, 200, 96, 0.8);
+$third-color60: rgba(243, 200, 96, 0.6);
 $third-color50: rgba(243, 200, 96, 0.5);
 $third-color0: rgba(243, 200, 96, 0);
 $fourth-color:#dcd0b0;
