--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,16 +1,16 @@
-/* line 2, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/_noDefaultStyle.scss */
+/* line 2, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/_noDefaultStyle.scss */
 * {
   margin: 0;
   padding: 0;
 }
 
-/* line 6, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/_noDefaultStyle.scss */
+/* line 6, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/_noDefaultStyle.scss */
 a {
   text-decoration: none;
   color: black;
 }
 
-/* line 10, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/_noDefaultStyle.scss */
+/* line 10, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/_noDefaultStyle.scss */
 ul, ol {
   list-style: none;
 }
@@ -33,7 +33,7 @@ width of element:
 */
 /*Extends*/
 /*FlexBoxes*/
-/* line 73, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/_varsMixinExtends.scss */
+/* line 75, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/_varsMixinExtends.scss */
 body .fixed-top .logo {
   display: flex;
   flex-direction: row;
@@ -41,7 +41,7 @@ body .fixed-top .logo {
   align-items: center;
 }
 
-/* line 79, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/_varsMixinExtends.scss */
+/* line 81, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/_varsMixinExtends.scss */
 body .fixed-top div ul li, body .fixed-top div ul li .luxFX, body main {
   display: flex;
   flex-direction: column;
@@ -50,15 +50,21 @@ body .fixed-top div ul li, body .fixed-top div ul li .luxFX, body main {
 }
 
 /*Mixins*/
-/* line 5, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+@font-face {
+  font-family: "RalewayLight";
+  src: url(../Resources/Raleway-Light.ttf);
+}
+
+/* line 9, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body {
   background: #1e3641;
   display: block;
-  font-family: "Raleway-Light";
+  font-family: "RalewayLight";
 }
 
-/* line 9, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 13, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body .fixed-top {
+  z-index: 99;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -70,16 +76,16 @@ body .fixed-top {
   position: fixed;
 }
 
-/* line 15, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 20, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body .fixed-top .logo {
   font-size: 20px;
   letter-spacing: 0.9em;
-  color: #f3c860;
+  color: rgba(243, 200, 96, 0.8);
   text-align: center;
 }
 
 @media (min-width: 160px) and (max-width: 640px) {
-  /* line 15, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 20, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top .logo {
     height: 80%;
     width: 83.33333%;
@@ -88,7 +94,7 @@ body .fixed-top .logo {
 }
 
 @media (min-width: 641px) and (max-width: 1007px) {
-  /* line 15, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 20, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top .logo {
     height: 80%;
     width: 33.33333%;
@@ -97,7 +103,7 @@ body .fixed-top .logo {
 }
 
 @media (min-width: 1008px) {
-  /* line 15, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 20, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top .logo {
     height: 80%;
     width: 33.33333%;
@@ -105,7 +111,7 @@ body .fixed-top .logo {
   }
 }
 
-/* line 34, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 39, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body .fixed-top div {
   display: flex;
   flex-direction: column;
@@ -114,12 +120,12 @@ body .fixed-top div {
 }
 
 @media (min-width: 160px) and (max-width: 640px) {
-  /* line 34, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 39, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div {
     height: 80%;
     width: 8.33333%;
   }
-  /* line 37, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 42, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div::before {
     content: "";
     background-image: url(../Resources/menu.svg);
@@ -133,7 +139,7 @@ body .fixed-top div {
 }
 
 @media (min-width: 641px) and (max-width: 1007px) {
-  /* line 34, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 39, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div {
     height: 80%;
     width: 50%;
@@ -141,7 +147,7 @@ body .fixed-top div {
 }
 
 @media (min-width: 1008px) {
-  /* line 34, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 39, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div {
     height: 80%;
     width: 50%;
@@ -149,22 +155,21 @@ body .fixed-top div {
 }
 
 @media (min-width: 160px) and (max-width: 640px) {
-  /* line 54, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 59, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div:hover ul {
-    height: 100%;
-    width: 50%;
+    transform: translateX(0%);
     opacity: 1;
   }
 }
 
-/* line 60, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 65, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body .fixed-top div ul {
   height: 80%;
   width: 100%;
 }
 
 @media (min-width: 160px) and (max-width: 640px) {
-  /* line 60, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 65, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div ul {
     transition: 0.6s ease;
     opacity: 0;
@@ -177,12 +182,29 @@ body .fixed-top div ul {
     right: 0;
     background-color: #23232d;
     height: 100%;
-    width: 0%;
+    width: 50%;
+    transform: translateX(100%);
+  }
+  /* line 77, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
+  body .fixed-top div ul::before {
+    content: "Opciones";
+    text-transform: uppercase;
+    top: 0;
+    height: 10%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    color: rgba(243, 200, 96, 0.6);
+    letter-spacing: 0.6em;
+    padding-top: 10px;
   }
 }
 
 @media (min-width: 641px) and (max-width: 1007px) {
-  /* line 60, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 65, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div ul {
     display: flex;
     flex-direction: row;
@@ -192,7 +214,7 @@ body .fixed-top div ul {
 }
 
 @media (min-width: 1008px) {
-  /* line 60, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 65, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div ul {
     display: flex;
     flex-direction: row;
@@ -201,22 +223,23 @@ body .fixed-top div ul {
   }
 }
 
-/* line 78, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 95, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body .fixed-top div ul li {
+  flex-grow: 1;
   height: 100%;
   width: auto;
-  flex-grow: 1;
 }
 
 @media (min-width: 160px) and (max-width: 640px) {
-  /* line 78, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 95, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div ul li {
-    height: 40px;
+    height: auto;
     width: 90%;
+    flex-grow: 0;
   }
 }
 
-/* line 85, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 103, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body .fixed-top div ul li .luxFX {
   letter-spacing: 0.7em;
   font-size: 10px;
@@ -232,7 +255,7 @@ body .fixed-top div ul li .luxFX {
 }
 
 @media (min-width: 160px) and (max-width: 640px) {
-  /* line 85, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 103, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div ul li .luxFX {
     background-position: 50% 1%;
     border: 1px solid rgba(243, 200, 96, 0.5);
@@ -243,7 +266,7 @@ body .fixed-top div ul li .luxFX {
 }
 
 @media (min-width: 641px) and (max-width: 1007px) {
-  /* line 85, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 103, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div ul li .luxFX {
     height: 100%;
     width: 100%;
@@ -251,38 +274,38 @@ body .fixed-top div ul li .luxFX {
 }
 
 @media (min-width: 1008px) {
-  /* line 85, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+  /* line 103, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
   body .fixed-top div ul li .luxFX {
     height: 100%;
     width: 80%;
   }
 }
 
-/* line 110, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 128, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body .fixed-top div ul li .luxFX:active {
   opacity: 1;
   transition: 0.05s ease;
 }
 
-/* line 115, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
-body .fixed-top div ul li:hover .luxFX {
+/* line 132, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
+body .fixed-top div ul li .luxFX:hover {
   background-position: 50% 99%;
   color: #fff;
   letter-spacing: 0.9em;
 }
 
-/* line 124, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 142, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body main {
   margin-top: 50px;
 }
 
-/* line 128, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 146, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body header {
   height: 620px;
   width: 100%;
 }
 
-/* line 132, C:/Users/mmedina/Documents/Programming/Training/Training-Sass/scss/style.scss */
+/* line 150, C:/Users/Admin.DESKTOP-0Q23CA9/Documents/GitHub/Training-Sass/scss/style.scss */
 body footer {
   height: 300px;
   width: 100%;
