New Color Added
White/creamy color added. Stay sharp 4 new variations.

--- a/SCSS/_varsMixinExtends.scss
+++ b/SCSS/_varsMixinExtends.scss
@@ -9,6 +9,7 @@ $third-color60: rgba(243, 200, 96, 0.6);
 $third-color50: rgba(243, 200, 96, 0.5);
 $third-color0: rgba(243, 200, 96, 0);
 $fourth-color:#dcd0b0;
+$cream-color: rgba(255, 254, 219, 1);
 
 $menuHeight: 50px;
 
